Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126514

[Regr: 6.5.0->6.7.1] Mouse wheel scrolling in nested list views broken

XMLWordPrintable

    • Linux/X11, macOS, Windows
    • 98778f00b (dev), 74b959e08 (6.8), 2ecfee540 (6.7)

      Scrolling in nested lists using mouse wheel is impossible compared to version 6.5.0. In version 6.5.0 when you reached the end of a nested list you could continue scrolling the main list. Now scrolling stops as long as your mouse cursor remains over the nested list.

      You can try this out with the following example:

      import QtQuick
      import QtQuick.Controls
      
      Window {
          width: 800
          height: 800
          visible: true
      
          ListView {
              anchors.fill: parent
              model: 5
              spacing: 5
              clip: true
              delegate: Rectangle {
                  id: mainDelegate
      
                  readonly property int row: index
      
                  width: ListView.view.width
                  height: 500
                  color: "green"
      
                  Label {
                      text: "%1".arg(mainDelegate.row)
                  }
                  ListView {
                      width: parent.width
                      height: parent.height / 2
                      anchors.verticalCenter: parent.verticalCenter
                      model: 10
                      spacing: 5
                      clip: true
                      delegate: Rectangle {
                          width: ListView.view.width
                          height: 100
                          color: "red"
      
                          Label {
                              text: "%1 %2".arg(mainDelegate.row).arg(index)
                          }
                      }
                  }
              }
          }
      }
      
      

        For Gerrit Dashboard: QTBUG-126514
        # Subject Branch Project Status CR V

            mikko.hallamaa Mikko Hallamaa
            permotion88 Karol Polak
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes